updates docs for version 2

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -108,18 +108,19 @@
           <div role="main" class="document">
             
   <h1>All modules for which code is available</h1>
-<ul><li><a href="pyrk/data/decay_heat.html">pyrk.data.decay_heat</a></li>
+<ul><li><a href="pyrk/convective_model.html">pyrk.convective_model</a></li>
+<li><a href="pyrk/data/decay_heat.html">pyrk.data.decay_heat</a></li>
 <li><a href="pyrk/data/precursors.html">pyrk.data.precursors</a></li>
 <li><a href="pyrk/data/tests/test_decay_heat.html">pyrk.data.tests.test_decay_heat</a></li>
 <li><a href="pyrk/data/tests/test_precursors.html">pyrk.data.tests.test_precursors</a></li>
 <li><a href="pyrk/db/database.html">pyrk.db.database</a></li>
-<li><a href="pyrk/db/tests/test_database.html">pyrk.db.tests.test_database</a></li>
 <li><a href="pyrk/density_model.html">pyrk.density_model</a></li>
 <li><a href="pyrk/driver.html">pyrk.driver</a></li>
 <li><a href="pyrk/inp/sim_info.html">pyrk.inp.sim_info</a></li>
 <li><a href="pyrk/inp/tests/test_sim_info.html">pyrk.inp.tests.test_sim_info</a></li>
 <li><a href="pyrk/inp/tests/test_validation.html">pyrk.inp.tests.test_validation</a></li>
 <li><a href="pyrk/inp/validation.html">pyrk.inp.validation</a></li>
+<li><a href="pyrk/materials/fhrfuel.html">pyrk.materials.fhrfuel</a></li>
 <li><a href="pyrk/materials/flibe.html">pyrk.materials.flibe</a></li>
 <li><a href="pyrk/materials/graphite.html">pyrk.materials.graphite</a></li>
 <li><a href="pyrk/materials/kernel.html">pyrk.materials.kernel</a></li>
