--- a/_modules/pyrk/db/database.html
+++ b/_modules/pyrk/db/database.html
@@ -197,7 +197,7 @@
 <span class="sd">        :param tablename: name of the table to add</span>
 <span class="sd">        :type tablename: str</span>
 <span class="sd">        :param description: metadata for the table</span>
-<span class="sd">        :type : str</span>
+<span class="sd">        :type description: str</span>
 <span class="sd">        :param tabletitle: metadata to store in plain english, a title</span>
 <span class="sd">        :type tabletitle: str</span>
 <span class="sd">        &quot;&quot;&quot;</span>
