--- a/_modules/pyrk/inp/sim_info.html
+++ b/_modules/pyrk/inp/sim_info.html
@@ -131,6 +131,7 @@
                  <span class="n">e</span><span class="o">=</span><span class="s">&quot;thermal&quot;</span><span class="p">,</span>
                  <span class="n">n_precursors</span><span class="o">=</span><span class="mi">6</span><span class="p">,</span>
                  <span class="n">n_decay</span><span class="o">=</span><span class="mi">11</span><span class="p">,</span>
+                 <span class="n">n_fic</span><span class="o">=</span><span class="mi">0</span><span class="p">,</span>
                  <span class="n">kappa</span><span class="o">=</span><span class="mf">0.0</span><span class="p">,</span>
                  <span class="n">rho_ext</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span>
                  <span class="n">feedback</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span>
@@ -152,6 +153,9 @@
 <span class="sd">        :type n_precursors: int</span>
 <span class="sd">        :param n_decay: number of decay groups</span>
 <span class="sd">        :type n_decay: int</span>
+<span class="sd">        :param n_fic: number of fictitious neutron groups for multi</span>
+<span class="sd">        point kinetics</span>
+<span class="sd">        :type n_fic: int</span>
 <span class="sd">        :param kappa: the value for kappa, a decay heat parameter</span>
 <span class="sd">        :type kappa: float</span>
 <span class="sd">        :param rho_ext: external reactivity</span>
@@ -165,7 +169,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">components</span> <span class="o">=</span> <span class="n">components</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">iso</span> <span class="o">=</span> <span class="n">iso</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">e</span> <span class="o">=</span> <span class="n">e</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">n_pg</span> <span class="o">=</span> <span class="n">n_precursors</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">n_pg</span> <span class="o">=</span> <span class="n">n_precursors</span> <span class="o">+</span> <span class="n">n_fic</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">n_dg</span> <span class="o">=</span> <span class="n">n_decay</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">rho_ext</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">init_rho_ext</span><span class="p">(</span><span class="n">rho_ext</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">feedback</span> <span class="o">=</span> <span class="n">feedback</span>
