--- a/_modules/pyrk/materials/material.html
+++ b/_modules/pyrk/materials/material.html
@@ -123,15 +123,18 @@
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span>
                  <span class="n">k</span><span class="o">=</span><span class="mi">0</span><span class="o">*</span><span class="n">units</span><span class="o">.</span><span class="n">watt</span><span class="o">/</span><span class="n">units</span><span class="o">.</span><span class="n">meter</span><span class="o">/</span><span class="n">units</span><span class="o">.</span><span class="n">kelvin</span><span class="p">,</span>
                  <span class="n">cp</span><span class="o">=</span><span class="mi">0</span><span class="o">*</span><span class="n">units</span><span class="o">.</span><span class="n">joule</span><span class="o">/</span><span class="n">units</span><span class="o">.</span><span class="n">kg</span><span class="o">/</span><span class="n">units</span><span class="o">.</span><span class="n">kelvin</span><span class="p">,</span>
+                 <span class="n">mu</span><span class="o">=</span><span class="mi">0</span><span class="o">*</span><span class="n">units</span><span class="o">.</span><span class="n">pascal</span><span class="o">*</span><span class="n">units</span><span class="o">.</span><span class="n">seconds</span><span class="p">,</span>
                  <span class="n">dm</span><span class="o">=</span><span class="n">DensityModel</span><span class="p">()):</span>
         <span class="sd">&quot;&quot;&quot;Initalizes a material</span>
 
 <span class="sd">        :param name: The name of the component (i.e., &quot;fuel&quot; or &quot;cool&quot;)</span>
 <span class="sd">        :type name: str.</span>
 <span class="sd">        :param k: The thermal conductivity of the component</span>
-<span class="sd">        :type k: float.</span>
+<span class="sd">        :type k: float, pint.unit.Quantity :math:&#39;watt/meter/K&#39;</span>
 <span class="sd">        :param cp: specific heat capacity, :math:`c_p`, in :math:`J/kg-K`</span>
 <span class="sd">        :type cp: float, pint.unit.Quantity :math:`J/kg-K`</span>
+<span class="sd">        :param mu: dynamic viscosity(for fluid), :math:`mu`, in :math:`Pa.s`</span>
+<span class="sd">        :type mu: float, pint.unit.Quantity :math:`Pa.s`</span>
 <span class="sd">        :param dm: The density of the material</span>
 <span class="sd">        :type dm: DensityModel object</span>
 <span class="sd">        &quot;&quot;&quot;</span>
@@ -140,6 +143,7 @@
         <span class="n">validation</span><span class="o">.</span><span class="n">validate_ge</span><span class="p">(</span><span class="s">&quot;k&quot;</span><span class="p">,</span> <span class="n">k</span><span class="p">,</span> <span class="mi">0</span><span class="o">*</span><span class="n">units</span><span class="o">.</span><span class="n">watt</span><span class="o">/</span><span class="n">units</span><span class="o">.</span><span class="n">meter</span><span class="o">/</span><span class="n">units</span><span class="o">.</span><span class="n">kelvin</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">cp</span> <span class="o">=</span> <span class="n">cp</span><span class="o">.</span><span class="n">to</span><span class="p">(</span><span class="s">&#39;joule/kg/kelvin&#39;</span><span class="p">)</span>
         <span class="n">validation</span><span class="o">.</span><span class="n">validate_ge</span><span class="p">(</span><span class="s">&quot;cp&quot;</span><span class="p">,</span> <span class="n">cp</span><span class="p">,</span> <span class="mi">0</span><span class="o">*</span><span class="n">units</span><span class="o">.</span><span class="n">joule</span><span class="o">/</span><span class="n">units</span><span class="o">.</span><span class="n">kg</span><span class="o">/</span><span class="n">units</span><span class="o">.</span><span class="n">kelvin</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">mu</span> <span class="o">=</span> <span class="n">mu</span><span class="o">.</span><span class="n">to</span><span class="p">(</span><span class="s">&#39;pascal*seconds&#39;</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">dm</span> <span class="o">=</span> <span class="n">dm</span>
 
 <div class="viewcode-block" id="Material.rho"><a class="viewcode-back" href="../../../src/pyrk.materials.material.html#pyrk.materials.material.Material.rho">[docs]</a>    <span class="k">def</span> <span class="nf">rho</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">temp</span><span class="p">):</span>
